--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   vae-training:
     build: .
-    command: python -m src.train --label self --env one_box_environment --use-cuda true
+    command: python -m src.train --label self --env one_box_environment --use-cuda true --batch-size 1000 --epochs 100
     volumes:
     - /home/jamesdi/workspace/baxter_vae_collision:/home/user/baxter_vae_collision
     environment:
